fix overflow tabs

--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -35,16 +35,19 @@
       right: 10px; } }
 
 .sidebar-tabs {
+  border-collapse:collapse;
+  display : table;
   top: 0;
   bottom: 0;
   height: 100%;
   background-color: #fff; }
+
   .sidebar-left .sidebar-tabs {
     left: 0; }
   .sidebar-right .sidebar-tabs {
     right: 0; }
   .sidebar-tabs, .sidebar-tabs > ul {
-    position: absolute;
+    position: relative;
     width: 40px;
     margin: 0;
     padding: 0; }
@@ -62,6 +65,7 @@
         color: #fff;
         background-color: #0074d9; }
       .sidebar-tabs > li.disabled, .sidebar-tabs > ul > li.disabled {
+        display:none;
         color: rgba(51, 51, 51, 0.4); }
         .sidebar-tabs > li.disabled:hover, .sidebar-tabs > ul > li.disabled:hover {
           background: transparent; }
@@ -75,8 +79,12 @@
         color: inherit;
         text-decoration: none;
         text-align: center; }
-  .sidebar-tabs > ul + ul {
-    bottom: 0; }
+        .sidebar-tabs > ul + ul {
+            display : table-row;
+            vertical-align : bottom;
+            height : 1px;
+            bottom: 0;
+}
 
 .sidebar-content {
   position: absolute;
